new program + code cleanup