@@ -1,7 +1,5 @@
 package com.scratchpad;
 
-import org.apache.commons.lang3.text.WordUtils;
-
 import java.text.ParseException;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
@@ -10,12 +8,14 @@ import java.util.LinkedHashSet;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import static org.apache.commons.text.WordUtils.capitalizeFully;
+
 public class CalendarRange {
 	public static final DateTimeFormatter yyyyMMDDDateFormat = DateTimeFormatter.ofPattern("yyyy-MM-dd");
 	private static final DateTimeFormatter MMMyyyyDateFormat = DateTimeFormatter.ofPattern("MMM yyyy");
 	private static final DateTimeFormatter ddMMMyyyyDateFormat = DateTimeFormatter.ofPattern("dd MMM yyyy");
 
-	public static synchronized String getDateFormatMMMyyyy(String date) throws ParseException {
+	public static synchronized String getDateFormatMMMyyyy(String date) {
 		return MMMyyyyDateFormat.format(yyyyMMDDDateFormat.parse(date));
 	}
 
@@ -30,11 +30,14 @@ public class CalendarRange {
 
 
 	public static void main(String[] args) throws ParseException {
-		System.out.println(WordUtils.capitalizeFully("01 JUL 2016"));
+		System.out.println(capitalizeFully("01 JUL 2016"));
 		LinkedHashSet<String> dates = new LinkedHashSet<>();
 		LocalDate startDate = LocalDate.parse("01 Jul 2016", ddMMMyyyyDateFormat);
 		LocalDate endDate = LocalDate.parse("31 Jul 2017", ddMMMyyyyDateFormat);
-		java.util.List<LocalDate> localDates = getDatesBetweenUsingJava8(startDate, endDate).parallelStream().distinct().collect(Collectors.toList());
+		java.util.List<LocalDate> localDates = getDatesBetweenUsingJava8(startDate, endDate)
+				.parallelStream()
+				.distinct()
+				.toList();
 		for (LocalDate date : localDates) {
 			dates.add(getDateFormatMMMyyyy(date.toString()));
 		}
